# update-mime-database-light

./: CMakeLists.txt  README.md  main.cc
